<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_id">loadapp_channel</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_OK">OK</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File name: </string>
    <string name="status">Status: </string>
    <string name="status_success">Success</string>
    <string name="status_failed">Fail</string>

    <string name="radiobutton_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radiobutton_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radiobutton_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="not_selected_msg">Please select the file to download</string>
    <string name="localtion_file">file:///sdcard/Download/file.html</string>
</resources>
