<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".loadapp.ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/cloud_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="H,16:8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloud_image">

        <RadioButton
            android:id="@+id/glide_radiobutton"
            style="@style/main_radiobutton"
            android:text="@string/radiobutton_glide" />

        <RadioButton
            android:id="@+id/loadapp_radiobutton"
            style="@style/main_radiobutton"
            android:text="@string/radiobutton_loadapp" />

        <RadioButton
            android:id="@+id/retrofit_radiobutton"
            style="@style/main_radiobutton"
            android:text="@string/radiobutton_retrofit" />
    </RadioGroup>

    <com.udacity.loadapp.ui.loadingbutton.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/default_margin"
        app:buttonBackgroundColor="@color/colorPrimary"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:buttonTextColor="@color/white"
        app:circleLoadingColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>